# krustlet-wasmcloud-provider

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  justfile-windows
.github/workflows/: build.yml  release.yml
crates/wascc-provider/: Cargo.toml
crates/wasmcloud-logging/: Cargo.toml
crates/wasmcloud-logging/src/: lib.rs
crates/wasmcloud-provider/: Cargo.toml
crates/wasmcloud-provider/src/: lib.rs  states.rs
crates/wasmcloud-provider/src/states/container/: running.rs  waiting.rs
crates/wasmcloud-provider/src/states/pod/: running.rs  starting.rs
demos/wascc/fileserver/: README.md  k8s.yaml
demos/wascc/fileserver/src/: lib.rs
demos/wascc/greet/: README.md  greet-wasmcloud.yaml
demos/wascc/hello-world-assemblyscript/: README.md  k8s.yaml
demos/wascc/uppercase/: README.md  uppercase-wasmcloud.yaml
demos/wasmcloud/fileserver/: Cargo.toml  README.md  k8s.yaml
demos/wasmcloud/fileserver/src/: lib.rs
demos/wasmcloud/greet/: Cargo.toml  README.md  greet-wasmcloud.yaml
demos/wasmcloud/greet/src/: lib.rs
demos/wasmcloud/hello-world-assemblyscript/: README.md  k8s.yaml  package-lock.json  package.json
demos/wasmcloud/hello-world-assemblyscript/assembly/: index.ts  tsconfig.json
demos/wasmcloud/uppercase/: Cargo.toml  README.md  uppercase-wasmcloud.yaml
demos/wasmcloud/uppercase/src/: lib.rs
src/: krustlet-wasmcloud.rs
tests/: integration_tests.rs
tests/oneclick/src/: main.rs
tests/podsmiter/src/: main.rs
