[package]
name = "krustlet-wasmcloud-provider"
version = "0.7.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
default-run = "krustlet-wasmcloud"
description = "A Krustlet provider implementation for WASMCloud"
repository = "hhttps://github.com/wasmCloud/krustlet-wasmcloud-provider"

[features]
default = ["native-tls"]
native-tls = [
    "kube/native-tls",
    "kube-runtime/native-tls",
    "krator/kube-native-tls",
    "kubelet/kube-native-tls",
    "wasmcloud-provider/native-tls",
    "oci-distribution/native-tls"
]
rustls-tls = [
    "kube/rustls-tls",
    "kube-runtime/rustls-tls",
    "krator/rustls-tls",
    "kubelet/rustls-tls",
    "wasmcloud-provider/rustls-tls",
    "oci-distribution/rustls-tls"
]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
actix-rt = "2.0"
kube = { version= "0.48", default-features = false }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_18"] }
env_logger = "0.8"
futures = "0.3"
krator = { version = "0.2", default-features = false }
kubelet = { version = "0.7", default-features = false, features = ["cli"] }
wasmcloud-provider = { path = "./crates/wasmcloud-provider", version = "0.7", default-features = false }
oci-distribution = { version = "0.6", default-features = false }
dirs = "3.0"
hostname = "0.3"
regex = "1.3"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", default-features = false }
tempfile = "3.1"
kube-runtime = { version = "0.48", default-features = false }

[workspace]
members = [
    "crates/wasmcloud-logging",
    "crates/wasmcloud-provider",
]

[[bin]]
name = "krustlet-wasmcloud"
path = "src/krustlet-wasmcloud.rs"

[[bin]]
name = "oneclick"
path = "tests/oneclick/src/main.rs"

[[bin]]
name = "podsmiter"
path = "tests/podsmiter/src/main.rs"
