[package]
name = "wasmcloud-logging"
version = "0.3.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
static_plugin = [] # Enable to statically compile this into a host

[dependencies]
log = "0.4"
simplelog = "0.9"
tempfile = "3.1"
wasmcloud-provider-core = "0.1"
wasmcloud-actor-core = "0.2"
wasmcloud-actor-logging = "0.1"
