[package]
name = "wasmcloud-provider"
version = "0.7.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
    "Kevin Flansburg <kevin.flansburg@gmail.com>",
]
edition = "2018"
publish = false

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls", "kubelet/kube-native-tls", "krator/kube-native-tls"]
rustls-tls = ["kube/rustls-tls", "kubelet/rustls-tls", "krator/rustls-tls"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
# Ideally, we should plumb the wasm3 vs wasmtime feature up into the top level build so people can
# choose their own, but right now the wasm3 stuff doesn't work with windows without a clang
# dependency
wasmcloud-host = { version = "0.16", default-features = false, features = ["wasmtime"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# This can be updated once the next version of krustlet comes out as there are some breaking API
# changes in the kube crate
kube = { version = "0.48", default-features = false }
kubelet = { version = "0.7", default-features = false, features = ["derive"] }
krator = { version = "0.2", default-features = false, features = ["derive"] }
tokio = { version = "1.0", features = ["fs", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.1"
wasmcloud-provider-core = "0.1"
wasmcloud-fs = { version = "0.4", features = ["static_plugin"] }
wasmcloud-logging = { path = "../wasmcloud-logging", version = "0.3", features = ["static_plugin"] }
wasmcloud-httpserver = { version = "0.12", features = ["static_plugin"] }
wascap = "0.6"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_18"] }
rand = "0.8"

[dev-dependencies]
oci-distribution = "0.6"
