[package]
name = "fileserver"
version = "0.3.0"
authors = ["Matt Fisher <matt.fisher@microsoft.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-actor-core = { version = "0.2", features = ["guest"] }
wapc-guest = "0.4"
wasmcloud-actor-http-server = { version = "0.1", features = ["guest"] }
wasmcloud-actor-blobstore = { version = "0.2", features = ["guest"] }

[profile.release]
opt-level = "s"
lto = true

[workspace]
